tree-sitter-agentscript/grammar.js
    source_file: $ => repeat(choice(
      $.config_block,
      $.variables_block,
      $.system_block,
      $.start_agent_block,
      $.topic_block,
      $.connection_block,
      $.language_block,
      $.knowledge_block,
      $._newline,
    )),

    // =========================================================================
    // Config Block
    // =========================================================================
    config_block: $ => seq(
      'config',
      ':',
      $._indent,
      repeat(choice($.config_entry, $._newline)),
      $._dedent,
    ),

    config_entry: $ => choice(
      seq('agent_name', ':', $.string),
      seq('agent_label', ':', $.string),
      seq('description', ':', $.string),
      seq('agent_type', ':', $.string),
      seq('default_agent_user', ':', $.string),
    ),

    // =========================================================================
    // Variables Block
    // =========================================================================
    variables_block: $ => seq(
      'variables',
      ':',
      $._indent,
      repeat(choice($.variable_def, $._newline)),
      $._dedent,
    ),

    variable_def: $ => seq(
      $.identifier,
      ':',
      $.variable_modifier,
      $.type,
      optional(seq('=', $.expression)),
      optional(seq(
        $._indent,
        repeat(choice($.variable_entry, $._newline)),
        $._dedent,
      )),
    ),

    variable_modifier: $ => choice('mutable', 'linked'),

    variable_entry: $ => choice(
      $.description_entry,
      seq('source', ':', choice($.string, $.reference)),
      seq('label', ':', $.string),
    ),

    // =========================================================================
    // System Block
    // =========================================================================
    description_entry: $ => seq('description', ':', $.string),

    // =========================================================================
    // Types
    // =========================================================================
    type: $ => choice(
      'string',
      'number',
      'boolean',
      'object',
      'integer',
      'long',
      'date',
      'datetime',
      'time',
      'timestamp',
      'currency',
      'id',
      $.list_type,
    ),

    list_type: $ => seq('list', '[', $.type, ']'),

    // =========================================================================
    // Expressions
    // =========================================================================
    expression: $ => choice(
      $.primary_expression,
      $.unary_expression,
      $.binary_expression,
      $.ternary_expression,
    ),

    primary_expression: $ => choice(
      $.string,
      $.number,
      $.boolean,
      $.none,
      $.reference,
      $.list,
      $.parenthesized_expression,
      $.property_access,
      $.index_access,
    ),

    binary_expression: $ => choice(
      prec.left(1, seq($.expression, 'or', $.expression)),
      prec.left(2, seq($.expression, 'and', $.expression)),
      prec.left(3, seq($.expression, $.identity_operator, $.expression)),
      prec.left(4, seq($.expression, $.comparison_operator, $.expression)),
      prec.left(5, seq($.expression, choice('+', '-'), $.expression)),
    ),

    // Identity operators for None checks (is, is not)
    // Use prec to ensure "is not" is preferred over "is" followed by unary "not"
    identity_operator: $ => choice(
      prec(2, seq('is', 'not')),  // "is not" as compound operator (higher precedence)
      prec(1, 'is'),               // "is" alone (lower precedence)
    ),

    comparison_operator: $ => choice('==', '!=', '<', '>', '<=', '>='),

    ternary_expression: $ => prec.right('ternary', seq(
      field('then', $.expression),
      'if',
      field('condition', $.expression),
      'else',
      field('else', $.expression),
    )),

    list: $ => seq(
      '[',
      optional(seq(
        $.expression,
        repeat(seq(',', $.expression)),
        optional(','),
      )),
      ']',
    ),

    // =========================================================================
    // References
    // =========================================================================
    // Reference is a token-level pattern: @identifier.identifier.identifier...
    // This prevents property_access from splitting it
    reference: $ => token(seq(
      '@',
      /[a-zA-Z_][a-zA-Z0-9_]*/,
      repeat(seq('.', /[a-zA-Z_][a-zA-Z0-9_]*/)),
    )),

    // =========================================================================
    // Literals
    // =========================================================================
    string: $ => choice(
      $._double_quoted_string,
      $._single_quoted_string,
      $._triple_quoted_string,
    ),

    _double_quoted_string: $ => seq(
      '"',
      repeat(choice(
        /[^"\\]+/,
        $.escape_sequence,
      )),
      '"',
    ),

    _single_quoted_string: $ => seq(
      "'",
      repeat(choice(
        /[^'\\]+/,
        $.escape_sequence,
      )),
      "'",
    ),

    _triple_quoted_string: $ => seq(
      '"""',
      repeat(choice(
        /[^"]+/,
        /"[^"]/,
        /""[^"]/,
      )),
      '"""',
    ),

    number: $ => /\d+(\.\d+)?/,

    boolean: $ => choice('True', 'False'),

    none: $ => 'None',

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
