tree-sitter-agentscript/test/corpus/config.txt
================================================================================
Config block - minimal
================================================================================

config:
   agent_name: "TestAgent"

--------------------------------------------------------------------------------

(source_file
  (config_block
    (config_entry
      (string))))

================================================================================
Config block - full
================================================================================

config:
   agent_name: "TestAgent"
   description: "A test agent"
   agent_label: "Test Label"

--------------------------------------------------------------------------------

(source_file
  (config_block
    (config_entry
      (string))
    (config_entry
      (string))
    (config_entry
      (string))))
